# grocy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yml  hacs.json  mkdocs.yml  pyproject.toml  renovate.json  taskfile.yml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: docs.yaml  hacs.yaml  hassfest.yaml  lint.yaml  release.yaml  stale.yml  tests.yaml
config/: configuration.yaml
config/backups/: Automatic_backup_2025.12.5_2026-01-07_19.55_33856625.tar  automatic_backup_2025_11_2.tar
custom_components/grocy/: __init__.py  binary_sensor.py  calendar.py  config_flow.py  const.py  coordinator.py  entity.py  grocy_data.py  manifest.json  sensor.py  services.py  services.yaml  todo.py
custom_components/grocy/translations/: de.json  en.json  fr.json  hr.json  nl_NL.json  pt-PT.json  pt_BR.json  ro.json  sv.json  uk_UA.json
docs/: FEATURES.md  check_coverage.py  index.md  test-feature-map.yaml  troubleshooting.md
hooks/: resolve_test_links.py
scripts/: setup  validate_translations.py
tests/: conftest.py  factories.py  test_calendar.py  test_config_flow.py  test_coordinator.py  test_entities.py  test_grocy_data.py  test_helpers.py  test_init.py  test_json_encoder.py  test_services.py  test_todo.py
