[project]
name = "grocy-custom-component"
version = "0.0.0"
description = "Grocy custom component for Home Assistant"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "colorlog==6.9.0",
    "homeassistant==2025.6.1",
    "pip>=21.3.1",
    "ruff==0.12.2",
    "pygrocy2==2.4.1",
]

[project.urls]
Homepage = "https://github.com/custom-components/grocy"
Issues = "https://github.com/custom-components/grocy/issues"

[tool.uv]
dev-dependencies = [
    "ruff==0.12.2",
]

